Add build and run instructions to README
Updated README with build and run requirements for the project.